hphp/test/zend/good/ext/spl/tests/SplFileInfo_001.php
<?hh <<__EntryPoint>> function main(): void {
$x = new SplFileInfo(1);
$x->__construct(1);

echo "done!\n";
}
